--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "description": "",
   "scripts": {
-    "start":"vite",
+    "start": "vite",
     "browsersync": "browser-sync start --directory --server ./public --files ./public/* --startPath index.html",
     "clean": "rimraf public/*",
     "copy-assets": "cpx \"src/assets/**/*.*\" public/",
@@ -20,16 +20,17 @@
     "watch-css": "tailwindcss build -i src/tailwind/tailwind.css -c src/tailwind/tailwind.config.js -o public/css/tailwind/tailwind.min.css --minify --watch"
   },
   "dependencies": {
-    "tailwindcss": "^3.0.7",
     "vite": "^2.9.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.4",
     "browser-sync": "^2.27.7",
     "cpx": "^1.5.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.12",
     "pug": "^3.0.2",
     "pug-cli": "^1.0.0-alpha6",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.24"
   }
 }
